@@ -1,5 +1,5 @@
 # MixtComp version 4 - july 2019
-# Copyright (C) Inria - Université de Lille - CNRS 
+# Copyright (C) Inria - Université de Lille - CNRS
 
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as
@@ -9,23 +9,23 @@
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU Affero General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>
- 
+
 
 #' @title Format the model parameter
-#' 
+#'
 #' @description Format the model list for rmc/rmcMultiRun functions:
 #' - add paramStr when missing
 #' - ensure the list format of each element
-#' 
+#'
 #' @param model description of model used per variable
-#' 
+#'
 #' @return model as a list where each element is the model applied to a variable (list with elements type and paramStr)
-#' 
+#'
 #' @author Quentin Grimonprez
-#' 
+#'
 #' @export
 formatModel <- function(model)
 {
@@ -35,7 +35,7 @@ formatModel <- function(model)
       out <- list(type = as.character(x[1]))
       if(length(x) >= 2)
         out$paramStr = as.character(x[2])
-      
+
       out
     })
   }else{
@@ -44,25 +44,25 @@ formatModel <- function(model)
         x = list(type = as.character(x))
       if(!("paramStr" %in% names(x)))
         x$paramStr = ""
-      
+
       return(x)
     })
   }
-  
+
   return(model)
 }
 
 
 #' @title Format the data parameter required by rmc
-#' 
+#'
 #' @description format data.frame or matrix in list of character
-#' 
+#'
 #' @param data data parameter as data.frame, matrix or list
-#' 
+#'
 #' @return data as a list of characters
-#' 
+#'
 #' @author Quentin Grimonprez
-#' 
+#'
 #' @export
 formatData <- function(data)
 {
@@ -73,27 +73,27 @@ formatData <- function(data)
   }else{
     out <- lapply(data, as.character)
   }
-  
+
   return(out)
 }
 
 
 #' @title Add the missing element to algo parameter
-#' 
-#' Add the missing element to algo parameter with default values
+#'
+#' @description Add the missing element to algo parameter with default values
 #'
 #' @param algo a list with the different algo parameters for rmc function
 #'
 #' @return algo parameter with all required elements (see \link{createAlgo} function)
 #'
 #' @author Quentin Grimonprez
-#' 
+#'
 #' @export
 completeAlgo <- function(algo)
 {
   algoDefault <- createAlgo()
-  
+
   missingNames <- setdiff(names(algoDefault), names(algo))
-  
+
   return(c(algo, algoDefault[missingNames]))
 }
