@@ -29,7 +29,7 @@ The similarities between classes k and g is defined by 1 - Sigma(k,g)
 require(RMixtCompIO) # for learning a mixture model
 dataLearn <- list(var1 = as.character(c(rnorm(50, -2, 0.8), rnorm(50, 2, 0.8))),
                   var2 = as.character(c(rnorm(50, 2), rpois(50, 8))))
-                  
+
 model <- list(var1 = list(type = "Gaussian", paramStr = ""),
               var2 = list(type = "Poisson", paramStr = ""))
 
