@@ -1,3 +1,5 @@
+- remove blockcluster from suggested packages
+
 v4.1.4 2020-11-12
 - export formatData, completeAlgo and formatModel functions to avoir using RMixtCompUtilities::: in RMixtComp
 - add class parameter for functional models in plotDataBoxplot
